chore(*): convert to storybook 8

--- a/stories/getting-started/Usage/ScopedElements.mdx
+++ b/stories/getting-started/Usage/ScopedElements.mdx
@@ -1,5 +1,5 @@
-import { Meta, Description } from "@storybook/addon-docs";
-import ScopedElements from "/docs/ScopedElements.md";
+import { Meta, Description } from "@storybook/blocks";
+import ScopedElements from "../../../docs/ScopedElements.md?raw";
 import { getCustomElements } from "@storybook/web-components";
 
 <Meta title="Getting Started/Usage/Scoped Elements" />
@@ -33,12 +33,13 @@ export const RequirePolyfillTable = () => {
       <th>Component</th>
     </tr>
   </thead>
+
   <tbody>
     {RequirePolyfillTable().map((c, i) => (
-      <tr key={c}>
-        <td>{i + 1}</td>
-        <td>{c}</td>
-      </tr>
-    ))}
+          <tr key={c}>
+            <td>{i + 1}</td>
+            <td>{c}</td>
+          </tr>
+        ))}
   </tbody>
 </table>
