docs(storybook): migrated md docs

--- a/stories/getting-started/Usage/ScopedElements.mdx
+++ b/stories/getting-started/Usage/ScopedElements.mdx
@@ -1,10 +1,10 @@
-import { Meta, Description } from "@storybook/blocks";
+import { Meta, Markdown } from "@storybook/blocks";
 import ScopedElements from "../../../docs/ScopedElements.md?raw";
 import { getCustomElements } from "@storybook/web-components";
 
 <Meta title="Getting Started/Usage/Scoped Elements" />
 
-<Description markdown={ScopedElements} />
+<Markdown>{ScopedElements}</Markdown>
 
 ## Components requiring polyfill
 
