--- a/stories/getting-started/Extendable.mdx
+++ b/stories/getting-started/Extendable.mdx
@@ -1,6 +1,6 @@
-import { Meta, Description } from '@storybook/blocks';
+import { Meta, Markdown } from '@storybook/blocks';
 import Extendable from '../../docs/Extendable.md?raw';
 
 <Meta title="Getting Started/Extending the library" />
 
-<Description markdown={Extendable} />
+<Markdown>{Extendable}</Markdown>
