--- a/stories/getting-started/Imports.mdx
+++ b/stories/getting-started/Imports.mdx
@@ -1,6 +1,6 @@
-import { Meta, Description } from '@storybook/blocks';
+import { Meta, Markdown } from "@storybook/blocks";
 import Imports from '../../docs/Imports.md?raw';
 
 <Meta title="Getting Started/Imports" />
 
-<Description markdown={Imports} />
+<Markdown>{Imports}</Markdown>
