--- a/stories/getting-started/Installation.mdx
+++ b/stories/getting-started/Installation.mdx
@@ -1,6 +1,6 @@
-import { Meta, Description } from '@storybook/blocks';
+import { Meta, Markdown } from "@storybook/blocks";
 import Installation from '../../docs/INSTALLATION.md?raw';
 
 <Meta title="Getting Started/Installation" />
 
-<Description markdown={Installation} />
+<Markdown>{Installation}</Markdown>>
