--- a/stories/getting-started/Introduction.mdx
+++ b/stories/getting-started/Introduction.mdx
@@ -1,6 +1,6 @@
-import { Meta, Description } from '@storybook/blocks';
+import { Meta, Markdown } from "@storybook/blocks";
 import Introduction from '../../docs/Introduction.md?raw';
 
 <Meta title="Getting Started/Introduction" />
 
-<Description markdown={Introduction} />
+<Markdown>{Introduction}</Markdown>
