--- a/stories/getting-started/Usage/Attributes.mdx
+++ b/stories/getting-started/Usage/Attributes.mdx
@@ -1,6 +1,6 @@
-import { Meta, Description } from '@storybook/blocks';
+import { Meta, Markdown } from "@storybook/blocks";
 import AttributeAndProperties from '../../../docs/Attributes.md?raw';
 
 <Meta title="Getting Started/Usage/Attribute and Properties" />
 
-<Description markdown={AttributeAndProperties} />
+<Markdown>{AttributeAndProperties}</Markdown>
