docs(*): update path

--- a/stories/getting-started/Frameworks/React.mdx
+++ b/stories/getting-started/Frameworks/React.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from "@storybook/blocks";
-import ReactDocs from "../../docs/React.md?raw";
+import ReactDocs from "../../../docs/React.md?raw";
 
 <Meta title="Getting Started/Frameworks/React" />
 
