--- a/stories/getting-started/Frameworks/Angular.mdx
+++ b/stories/getting-started/Frameworks/Angular.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from "@storybook/blocks";
-import Angular from "../../docs/Angular.md?raw";
+import Angular from "../../../docs/Angular.md?raw";
 
 <Meta title="Getting Started/Frameworks/Angular" />
 
