--- a/stories/getting-started/Frameworks/Next.mdx
+++ b/stories/getting-started/Frameworks/Next.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from "@storybook/blocks";
-import NextDocs from "../../docs/Next.md?raw";
+import NextDocs from "../../../docs/Next.md?raw";
 
 <Meta title="Getting Started/Frameworks/NextJS" />
 
