docs(stories): update wip

--- a/stories/templates/Checkbox/additional.mdx
+++ b/stories/templates/Checkbox/additional.mdx
@@ -6,14 +6,7 @@ Set `hasFeedback` to true to enable sgds validation stylings.
 
 Try submitting the required form below without checking the checkbox to trigger the error message
 
-export const ValidationTemplate = () =>
-  html`
-    <form>
-      <sgds-checkbox required hasFeedback invalidFeedback="This is required">Check me</sgds-checkbox>
-      <sgds-button type="submit">Submit</sgds-button>
-    </form>
-  `;
 
-<Canvas>
-  <Story name="Validation">{ValidationTemplate.bind({})}</Story>
+<Canvas of={CheckboxStories.CheckboxValidations}>
+  <Story of={CheckboxStories.CheckboxValidations} />
 </Canvas>
