--- a/stories/templates/Radio/additional.mdx
+++ b/stories/templates/Radio/additional.mdx
@@ -6,19 +6,7 @@ Set `hasFeedback` to true to enable sgds validation stylings.
 
 Try submitting the required form below without clicking on any radio buttons to trigger the error message
 
-export const ValidationTemplate = () =>
-  html`
-    <form>
-      <sgds-radio-group required hasFeedback invalidFeedback="This is required">
-        <span slot="label">Select an option</span>
-        <sgds-radio value="1">Option 1</sgds-radio>
-        <sgds-radio value="2">Option 2</sgds-radio>
-        <sgds-radio value="3">Option 3</sgds-radio>
-      </sgds-radio-group>
-      <sgds-button type="submit">Submit</sgds-button>
-    </form>
-  `;
 
-<Canvas>
-  <Story name="Validation">{ValidationTemplate.bind({})}</Story>
+<Canvas of={RadioStories.Validation}>
+  <Story of={RadioStories.Validation} />
 </Canvas>
