--- a/stories/templates/ActionCard/additional.mdx
+++ b/stories/templates/ActionCard/additional.mdx
@@ -3,6 +3,6 @@
 `SgdsActionCard` `type='radio'` is essentially form radio with a card UI.
 Use `SgdsRadioGroup` as a wrapper to enable radio behaviour.
 
-<Canvas>
+<Canvas of={ActionCardStories.ActionCardAsRadio}>
   <Story of={ActionCardStories.ActionCardAsRadio} />
 </Canvas>
