--- a/stories/templates/Input/additional.mdx
+++ b/stories/templates/Input/additional.mdx
@@ -4,19 +4,6 @@
 
 Set `hasFeedback` to true to enable sgds validation stylings.
 
-export const ValidationTemplate = () => 
-    html`
-    <sgds-input 
-    name="input1" 
-    id="input1" 
-    minlength="5" 
-    hasFeedback="true" 
-    invalidFeedback="Minimum length 5"
-    hintText="At least 5 characters"
-    label="Name"
-    >
-    </sgds-input>`
-
-<Canvas>
-  <Story name='Validation'>{ValidationTemplate.bind({})}</Story>
+<Canvas of={InputStories.InputValidation}>
+  <Story of={InputStories.InputValidation} />
 </Canvas>
