--- a/stories/templates/Stepper/additional.mdx
+++ b/stories/templates/Stepper/additional.mdx
@@ -1,15 +1,11 @@
-import { MockStepper } from "../../mocks/stepper.ts"
-
-export const MockStepperTemplate = () => Object.assign(new MockStepper())
-
 ## Stepper in a form context
 
-<Canvas>
-  <Story name="Example">{MockStepperTemplate.bind({})}</Story>
+<Canvas of={StepperStories.StepperExample}>
+  <Story of={StepperStories.StepperExample} />
 </Canvas>
 
-## Working Example 
+## Working Example
 
-### Angular 
+### Angular
 
 Please see a [working example of stepper on an Angular app](https://stackblitz.com/github/clukhei/angular-stepper)
