--- a/stories/templates/Table/additional.mdx
+++ b/stories/templates/Table/additional.mdx
@@ -2,75 +2,57 @@
 
 Sorting on a column is enabled by adding the `sort` property. The sorting algorithm is based on javascript array.sort() method. In ascending order from bottom, alphabets come first, followed by numbers, and then symbols. Similarly, in descending order from bottom, symbols come first, followed by numbers, and then alphabets.
 
-<Canvas>
-  <Story
-    name="Sorting"
-    args={{
-      sort: "true"
-    }}
-  >
-    {Template.bind({})}
-  </Story>
+<Canvas of={TableStories.SortingTable}>
+  <Story of={TableStories.SortingTable} />
 </Canvas>
 
 ## Removable Sort
 
 When `removableSort` is present, the third click removes the sorting from the column.
 
-<Canvas>
-  <Story name="removableSort" args={{ removableSort: true }}>
-    {Template.bind({})}
-  </Story>
+<Canvas of={TableStories.RemovableSort}>
+  <Story of={TableStories.RemovableSort} />
 </Canvas>
 
 ## Striped Body
 
 Adds zebra-striping using striped to table row within the `<tbody>`.
 
-<Canvas>
-  <Story name="striped" args={{ striped: true }}>
-    {Template.bind({})}
-  </Story>
+<Canvas of={TableStories.StripedTable}>
+  <Story of={TableStories.StripedTable} />
 </Canvas>
 
 ## Bordered Body
 
 Use `bordered` to add borders on all sides of the table and cells.
 
-<Canvas>
-  <Story name="bordered" args={{ bordered: true }}>
-    {Template.bind({})}
-  </Story>
+<Canvas of={TableStories.BorderedTable}>
+  <Story of={TableStories.BorderedTable} />
 </Canvas>
 
 ## Borderless Body
 
 Add `borderless` to remove all borders on the table and cells, including table header.
 
-<Canvas>
-  <Story name="borderless" args={{ borderless: true }}>
-    {Template.bind({})}
-  </Story>
+<Canvas of={TableStories.BorderlessTable}>
+  <Story of={TableStories.BorderlessTable} />
 </Canvas>
 
 ## Hovered Body
 
 Use hover to enable a hover state on table rows within a `<tbody>`.
 
-<Canvas>
-  <Story name="hover" args={{ hover: true }}>
-    {Template.bind({})}
-  </Story>
+<Canvas of={TableStories.HoverTable}>
+  <Story of={TableStories.HoverTable} />
 </Canvas>
+
 
 ## Dark Table
 
 Use `variant="dark"` to invert the colors of the table and get light text on a dark background.
 
-<Canvas>
-  <Story name="variant" args={{ variant: "dark" }}>
-    {Template.bind({})}
-  </Story>
+<Canvas of={TableStories.VariantTable}>
+  <Story of={TableStories.VariantTable} />
 </Canvas>
 
 ## Responsive
@@ -81,18 +63,14 @@ Responsive tables allow tables to be scrolled horizontally with ease.
 
 Across every breakpoint, use `responsive="always"` for horizontally scrolling tables. Responsive tables are wrapped automatically in a `div`. The following example has 12 columns that are scrollable horizontally.
 
-<Canvas>
-  <Story name="alwaysResponsive" args={{ responsive: "always" }}>
-    {Template.bind({})}
-  </Story>
+<Canvas of={TableStories.AlwaysResponsive}>
+  <Story of={TableStories.AlwaysResponsive} />
 </Canvas>
 
 ## Breakpoint Specific
 
 Use `responsive="sm"`, `responsive="md"` , `responsive="lg"`, or `responsive="xl"` as needed to create responsive tables up to a particular breakpoint. From that breakpoint and up, the table will behave normally and not scroll horizontally.
 
-<Canvas>
-  <Story name="responsive" args={{ responsive: "sm" }}>
-    {Template.bind({})}
-  </Story>
+<Canvas of={TableStories.Responsive}>
+  <Story of={TableStories.Responsive} />
 </Canvas>
