chore(*): add playground elements in Button

--- a/stories/templates/Button/additional.mdx
+++ b/stories/templates/Button/additional.mdx
@@ -38,3 +38,10 @@ Use SVG element to add icon to the slot.
 <Canvas of={ButtonStories.ButtonWithIcon}>
   <Story of={ButtonStories.ButtonWithIcon} />
 </Canvas>
+
+## Playground
+
+
+<Canvas of={ButtonStories.ButtonPlayground}>
+  <Story of={ButtonStories.ButtonPlayground} />
+</Canvas>
