docs(accordion): add sb

--- a/stories/templates/Alert/additional.mdx
+++ b/stories/templates/Alert/additional.mdx
@@ -25,7 +25,7 @@ Use `outlined` prop to enable the outlined style
 
 ## Dismissable 
 
-The dismissible prop adds a close button to the alert to allow the component to be removed from the DOM when no longer needed
+The dismissible prop adds a close button to the alert to allow the component to be removed from the DOM when no longer needed.
 When the close button is clicked, it updates the `show` state of alert to false. 
 
 
