docs(stepper): wip

--- a/stories/templates/Stepper/additional.mdx
+++ b/stories/templates/Stepper/additional.mdx
@@ -1,3 +1,14 @@
+## Vertical stepper
+
+By default, stepper is of `horizontal` orientation. Set stepper to vertical with `orientation="vertical"`
+
+<Canvas of={StepperStories.Orientation}>
+  <Story of={StepperStories.Orientation} />
+</Canvas>
+
+## Clickable steps
+
+
 ## Stepper in a form context
 
 <Canvas of={StepperStories.StepperExample}>
