docs(*): rearrange folder structure in storybook

--- a/stories/getting-started/Frameworks/React.mdx
+++ b/stories/getting-started/Frameworks/React.mdx
@@ -1,6 +1,6 @@
 import { Meta, Markdown } from "@storybook/blocks";
 import ReactDocs from "../../../docs/React.md?raw";
 
-<Meta title="Getting Started/Frameworks/React" />
+<Meta title="Frameworks/React" />
 
 <Markdown>{ReactDocs}</Markdown>
