--- a/stories/getting-started/Usage/ScopedElements.mdx
+++ b/stories/getting-started/Usage/ScopedElements.mdx
@@ -2,7 +2,7 @@ import { Meta, Markdown } from "@storybook/blocks";
 import ScopedElements from "../../../docs/ScopedElements.md?raw";
 import { getCustomElements } from "@storybook/web-components";
 
-<Meta title="Getting Started/Usage/Scoped Elements" />
+<Meta title="Usage/Scoped Elements" />
 
 <Markdown>{ScopedElements}</Markdown>
 
