--- a/stories/getting-started/Frameworks/Angular.mdx
+++ b/stories/getting-started/Frameworks/Angular.mdx
@@ -1,6 +1,6 @@
 import { Meta, Markdown } from "@storybook/blocks";
 import Angular from "../../../docs/Angular.md?raw";
 
-<Meta title="Getting Started/Frameworks/Angular" />
+<Meta title="Frameworks/Angular" />
 
 <Markdown>{Angular}</Markdown>
