--- a/stories/getting-started/Frameworks/Next.mdx
+++ b/stories/getting-started/Frameworks/Next.mdx
@@ -1,7 +1,7 @@
 import { Meta, Markdown } from "@storybook/blocks";
 import NextDocs from "../../../docs/Next.md?raw";
 
-<Meta title="Getting Started/Frameworks/NextJS" />
+<Meta title="Frameworks/NextJS" />
 
 <Markdown>{NextDocs}</Markdown>
 
