--- a/stories/getting-started/Frameworks/Vue.mdx
+++ b/stories/getting-started/Frameworks/Vue.mdx
@@ -1,6 +1,6 @@
 import { Meta, Markdown } from "@storybook/blocks";
 import Vue from "../../../docs/Vue.md?raw";
 
-<Meta title="Getting Started/Frameworks/Vue" />
+<Meta title="Frameworks/Vue" />
 
 <Markdown>{Vue}</Markdown>
