--- a/stories/getting-started/Usage/Attributes.mdx
+++ b/stories/getting-started/Usage/Attributes.mdx
@@ -1,6 +1,6 @@
 import { Meta, Markdown } from "@storybook/blocks";
 import AttributeAndProperties from '../../../docs/Attributes.md?raw';
 
-<Meta title="Getting Started/Usage/Attribute and Properties" />
+<Meta title="Usage/Attribute and Properties" />
 
 <Markdown>{AttributeAndProperties}</Markdown>
