--- a/stories/getting-started/Usage/Events.mdx
+++ b/stories/getting-started/Usage/Events.mdx
@@ -1,6 +1,6 @@
 import { Meta, Markdown } from '@storybook/blocks';
 import Events from '../../../docs/Events.md?raw';
 
-<Meta title="Getting Started/Usage/Events" />
+<Meta title="Usage/Events" />
 
 <Markdown>{Events}</Markdown>
