--- a/stories/getting-started/Usage/Slots.mdx
+++ b/stories/getting-started/Usage/Slots.mdx
@@ -1,6 +1,6 @@
 import { Meta, Markdown } from '@storybook/blocks';
 import Slots from '../../../docs/Slots.md?raw';
 
-<Meta title="Getting Started/Usage/Slots" />
+<Meta title="Usage/Slots" />
 
 <Markdown>{Slots}</Markdown>
