--- a/stories/getting-started/Usage/Stylings.mdx
+++ b/stories/getting-started/Usage/Stylings.mdx
@@ -1,6 +1,6 @@
 import { Meta, Markdown } from "@storybook/blocks";
 import Stylings from '../../../docs/Stylings.md?raw';
 
-<Meta title="Getting Started/Usage/Stylings" />
+<Meta title="Usage/Styles and Theming" />
 
 <Markdown>{Stylings}</Markdown>
