chore(*): rearrangedfolders ins torybook

--- a/stories/frameworks/Vue.mdx
+++ b/stories/frameworks/Vue.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from "@storybook/blocks";
-import Vue from "../../../docs/Vue.md?raw";
+import Vue from "../../docs/Vue.md?raw";
 
 <Meta title="Frameworks/Vue" />
 
