--- a/stories/migration/oneToTwo.mdx
+++ b/stories/migration/oneToTwo.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from "@storybook/blocks";
-import versionOneToTwo from '../../../docs/Migration_v1_to_v2.md?raw';
+import versionOneToTwo from '../../docs/Migration_v1_to_v2.md?raw';
 
 <Meta title="Migration/v1.x.x to v2.x.x" />
 
