--- a/stories/migration/twoToThree.mdx
+++ b/stories/migration/twoToThree.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from "@storybook/blocks";
-import versionTwoToThree from '../../../docs/Migration_v2_to_v3.md?raw';
+import versionTwoToThree from '../../docs/Migration_v2_to_v3.md?raw';
 
 <Meta title="Migration/v2.x.x to v3.x.x" />
 
