--- a/stories/usage/Attributes.mdx
+++ b/stories/usage/Attributes.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from "@storybook/blocks";
-import AttributeAndProperties from '../../../docs/Attributes.md?raw';
+import AttributeAndProperties from '../../docs/Attributes.md?raw';
 
 <Meta title="Usage/Attribute and Properties" />
 
