--- a/stories/usage/Extendable.mdx
+++ b/stories/usage/Extendable.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from '@storybook/blocks';
-import Extendable from '../../../docs/Extendable.md?raw';
+import Extendable from '../../docs/Extendable.md?raw';
 
 <Meta title="Usage/Extending the library" />
 
