--- a/stories/usage/ScopedElements.mdx
+++ b/stories/usage/ScopedElements.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from "@storybook/blocks";
-import ScopedElements from "../../../docs/ScopedElements.md?raw";
+import ScopedElements from "../../docs/ScopedElements.md?raw";
 import { getCustomElements } from "@storybook/web-components";
 
 <Meta title="Usage/Scoped Elements" />
