--- a/stories/style/Theming.mdx
+++ b/stories/style/Theming.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from "@storybook/blocks";
-import Theming from '../../../docs/Theming.md?raw';
+import Theming from '../../docs/Theming.md?raw';
 
 <Meta title="Style/Theming" />
 
