--- a/stories/usage/Events.mdx
+++ b/stories/usage/Events.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from '@storybook/blocks';
-import Events from '../../../docs/Events.md?raw';
+import Events from '../../docs/Events.md?raw';
 
 <Meta title="Usage/Events" />
 
