--- a/stories/usage/Slots.mdx
+++ b/stories/usage/Slots.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from '@storybook/blocks';
-import Slots from '../../../docs/Slots.md?raw';
+import Slots from '../../docs/Slots.md?raw';
 
 <Meta title="Usage/Slots" />
 
