docs(stepper): update stepper storybook

--- a/stories/templates/Stepper/additional.mdx
+++ b/stories/templates/Stepper/additional.mdx
@@ -59,6 +59,10 @@ Reference the API table and methods table carefully when creating the Stepper co
 
 ## Working Examples
 
+### React 
+
+Please see a <a target="_blank" href="https://stackblitz.com/github/clukhei/sgds-wc-react-stepper?file=src%2FApp.tsx">working example of stepper on an React app</a>
+
 ### Angular
 
 Please see a <a target="_blank" href="https://stackblitz.com/github/clukhei/angular-stepper">working example of stepper on an Angular app</a>
