chore(*): revert playground ide commit

--- a/stories/getting-started/Installation.mdx
+++ b/stories/getting-started/Installation.mdx
@@ -3,4 +3,4 @@ import Installation from '../../docs/INSTALLATION.md?raw';
 
 <Meta title="Getting Started/Installation" />
 
-<Markdown>{Installation}</Markdown>>
+<Markdown>{Installation}</Markdown>
