chore(*): update word from dismissable to dismissible

--- a/stories/templates/Alert/additional.mdx
+++ b/stories/templates/Alert/additional.mdx
@@ -23,14 +23,14 @@ Use `outlined` prop to enable the outlined style
   <Story of={AlertStories.OutlinedVariants} />
 </Canvas>
 
-## Dismissable 
+## Dismissible 
 
 The dismissible prop adds a close button to the alert to allow the component to be removed from the DOM when no longer needed.
 When the close button is clicked, it updates the `show` state of alert to false. 
 
 
-<Canvas of={AlertStories.Dismissable}>
-  <Story of={AlertStories.Dismissable} />
+<Canvas of={AlertStories.Dismissible}>
+  <Story of={AlertStories.Dismissible} />
 </Canvas>
 
 ## Icon 
