docs(input): validation in storybook

--- a/stories/templates/Input/additional.mdx
+++ b/stories/templates/Input/additional.mdx
@@ -54,7 +54,26 @@ Use the string type `prefix` or `suffix` prop to add more indication and meaning
 ## Leading Icon <sgds-badge show> work in progress </sgds-badge>
 
 
-## Validation  <sgds-badge show> work in progress </sgds-badge>
+## Validation 
 
+HTML form constraint validation is built-in our components. By default, there is no need to control the `invalid` prop to enable constraint validations. 
 
+- To enable invalid styles and feedback message set `hasFeedback="both"`
+- To enable invalid styles only, set `hasFeedback="style"`
+- To enable feedback message only, set `hasFeedback="text"`
 
+In this example, `hasFeedback` is set to `both`. Press submit to show constraint validation behaviour for `required` and `minlength=5`. 
+Resetting the form, reset's the validity and the value of the input to its initial default value.
+
+<Canvas of={InputStories.InputValidation}>
+  <Story of={InputStories.InputValidation} />
+</Canvas>
+
+### Overriding the invalid feedback message 
+
+By default, the invalid feedback reflected is based on the browser's native error message based on the ValidityState.  To override the default message, 
+use `invalidFeedback` prop. 
+
+<Canvas of={InputStories.OverrideInvalidFeedback}>
+  <Story of={InputStories.OverrideInvalidFeedback} />
+</Canvas>
