docs(*): added validation stories for components

--- a/stories/templates/Input/additional.mdx
+++ b/stories/templates/Input/additional.mdx
@@ -56,7 +56,7 @@ Use the string type `prefix` or `suffix` prop to add more indication and meaning
 
 ## Validation 
 
-HTML form constraint validation is built-in our components. By default, there is no need to control the `invalid` prop to enable constraint validations. 
+HTML form constraint validation is built-in. By default, there is no need to control the `invalid` prop to enable constraint validations. 
 
 - To enable invalid styles and feedback message set `hasFeedback="both"`
 - To enable invalid styles only, set `hasFeedback="style"`
