--- a/stories/templates/Checkbox/additional.mdx
+++ b/stories/templates/Checkbox/additional.mdx
@@ -1,12 +1,54 @@
+## Disabled
+
+Set checkbox to disabled state using `disabled` prop
+
+<Canvas of={CheckboxStories.Disabled}>
+  <Story of={CheckboxStories.Disabled} />
+</Canvas>
+
+## Indeterminate
+
+Set checkbox to indeterminate state using `indeterminate` prop
+
+<Canvas of={CheckboxStories.Indeterminate}>
+  <Story of={CheckboxStories.Indeterminate} />
+</Canvas>
+
+## Invalid and feedback
+
+Each `sgds-checkbox` component controls its own `invalid` state.
+To enable SGDS form validation styles set `hasFeedback` to true. 
+
+<Canvas of={CheckboxStories.Invalid}>
+  <Story of={CheckboxStories.Invalid} />
+</Canvas>
+
+When `sgds-checkbox-group` hasFeedback is set to true, it takes precedence and sets all its of its `sgds-checkbox` children `hasFeedback` prop to true 
+
+<Canvas of={CheckboxStories.InvalidGroup}>
+  <Story of={CheckboxStories.InvalidGroup} />
+</Canvas>
+
+
 ## Validation
 
-`SgdsCheckbox` runs native HTMLInputElement methods to check on the [constraint validation](https://developer.mozilla.org/en-US/docs/Web/HTML/Constraint_validation) of the input and applies our own validation stylings
+HTML form constraint validation is built-in. By default, there is no need to control the `invalid` prop to enable constraint validations. 
 
-Set `hasFeedback` to true to enable sgds validation stylings.
+- To enable invalid styles and feedback message, set `hasFeedback` to true on `sgds-checkbox-group`.
 
-Try submitting the required form below without checking the checkbox to trigger the error message
+In this example, press submit to show constraint validation behaviour for `required` on the checkboxes. 
+Form reset reset's the validity and the value of the input to its initial default value.
+
+<Canvas of={CheckboxStories.Validation}>
+  <Story of={CheckboxStories.Validation} />
+</Canvas>
 
 
-<Canvas of={CheckboxStories.CheckboxValidations}>
-  <Story of={CheckboxStories.CheckboxValidations} />
+### Overriding the invalid feedback message 
+
+By default, the invalid feedback reflected is based on the browser's native error message based on the ValidityState.  To override the default message, 
+use `invalidFeedback` prop. 
+
+<Canvas of={CheckboxStories.OverrideInvalidFeedback}>
+  <Story of={CheckboxStories.OverrideInvalidFeedback} />
 </Canvas>
