docs(footer): add sb docs

--- a/stories/templates/Divider/additional.mdx
+++ b/stories/templates/Divider/additional.mdx
@@ -3,7 +3,7 @@
 By default, the divider is of horizontal orientation.
 
 Change to vertical orientation by setting `orientation="vertical"`.
-Ensure that 
+Ensure that the parent container has a height. 
 
 <Canvas of={DividerStories.Orientation}>
   <Story of={DividerStories.Orientation} />
