--- a/stories/form-validation/validation.mdx
+++ b/stories/form-validation/validation.mdx
@@ -30,7 +30,7 @@ Finally, a final validation check is fired upon clicking the submit button, duri
 
 Try focusing and blurring on the controls without inputting any value to observe SGDS onchange validation behaviour.
 
-## Obtain form value via FormData 
+## Obtain form value via FormData
 
 <Canvas of={ValidationStories.FormData}>
   <Story of={ValidationStories.FormData} />
@@ -45,7 +45,6 @@ Try focusing and blurring on the controls without inputting any value to observe
 | **QuantityToggle** | Implemented                                 | 1. Min <br/> 2. Max                                                                          | 1. Validation occurs on `onChange` and after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled.  |                                       |
 | **Radio**          | Implemented                                 | 1. Required                                                                                  | 1. Validation occurs after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled.                    |                                       |
 | **Textarea**       | Implemented                                 | 1. Required <br/> 2. MinLength <br/> 3. MaxLength                                            | 1. Validation shows on `onChange` and after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled.   |                                       |
-| **FileUpload**     | Partially implemented (file size limit WIP) | 1. Required                                                                                  | 1. Validation happens on submission <br/> 2. Validation resets when form resets. <br/> 3. When disabled, validation is disabled.                                                                     | File size limit validation (WIP)      |
-| **ActionCard**     | WIP                                         |                                                                                              |                                                                                                                                                                                                                             |                                       |
-| **Combobox**       | WIP                                         |                                                                                              |                                                                                                                                                                                                                             |                                       |
-| **Datepicker**     | WIP                                         | 1. Required <br/> 2. Min <br/> 3. Max                                                        | 1. Validation happens on `onChange` and after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled. |                                       |
+| **FileUpload**     | Partially implemented (file size limit WIP) | 1. Required                                                                                  | 1. Validation happens on submission <br/> 2. Validation resets when form resets. <br/> 3. When disabled, validation is disabled.                                                                                            | File size limit validation (WIP)      |
+| **Combobox**       | Implemented                                 | 1. Required                                                                                  | 1. Validation occurs on `onChange` and after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled.                                                                                                                                                                                                                            |                                       |
+| **Datepicker**     | Implemented                                 | 1. Required <br/> 2. Min <br/> 3. Max                                                        | 1. Validation happens on `onChange` and after input is touched. <br/> 2. Validation happens on form submit, blocks submission. <br/> 3. Validation resets when form resets. <br/> 4. When disabled, validation is disabled. |                                       |
