docs(progress-bar): fix undefined error

--- a/stories/templates/ProgressBar/additional.mdx
+++ b/stories/templates/ProgressBar/additional.mdx
@@ -2,14 +2,14 @@
 
 There are two variants of progress bar : primary(default) and neutral
 
-<Canvas of={ProgressStories.Variants}>
-  <Story of={ProgressStories.Variants} />
+<Canvas of={ProgressBarStories.Variants}>
+  <Story of={ProgressBarStories.Variants} />
 </Canvas>
 
 ## Label 
 
 Add label to the progress bar to provide a textual representation of the progress 
 
-<Canvas of={ProgressStories.Label}>
-  <Story of={ProgressStories.Label} />
+<Canvas of={ProgressBarStories.Label}>
+  <Story of={ProgressBarStories.Label} />
 </Canvas>
